--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,41 @@
-// TODO
+.container {
+  max-width: 720px;
+  margin-top: 3rem;
+  margin: 5rem auto 0;
+
+  h1 {
+    display: inline-block;
+  }
+}
+
+.contentText {
+  margin-top: 3rem;
+  text-align: justify;
+
+  h2 {
+    margin-top: 3rem;
+  }
+  p {
+    margin-top: 3rem;
+    color: var(--gray-300);
+  }
+}
+
+.postInformation {
+  display: flex;
+  align-items: center;
+  margin-top: 1rem;
+  font-size: 0.75rem;
+  line-height: 1.125rem;
+  color: var(--gray-300);
+
+  div {
+    display: flex;
+    min-width: 6rem;
+    align-items: center;
+  }
+
+  span {
+    padding-left: 3px;
+  }
+}
