--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,44 @@
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  
 }
 
-// TODO
+:root {
+  --black: #282c34;
+  --pink: #ff57b2;
+  --white: #f8f8f8;
+  --gray-300: #bbbbbb;
+  --gray-200: #c4c4c4;
+}
+
+@media(media-with: 1080px){
+  html{
+    font-size: 93.75%;
+  }
+}
+
+@media(media-with: 720px){
+  html{
+    font-size: 87.5%;
+  }
+}
+
+body {
+  background: var(--black);
+  color: var(--white);
+}
+
+body, input, select, textarea, button {
+  font: 400 1rem "Inter", sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+a{
+  color:inherit;
+  text-decoration: none;
+}
