--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -6,6 +6,37 @@
   h1 {
     display: inline-block;
   }
+
+  > article > span {
+    font-size: 0.875rem;
+    color: var(--gray-300);
+    font-style: italic;
+    display: block;
+    margin-top: 1rem;
+  }
+}
+
+.postInformation {
+  display: flex;
+  margin-top: 1rem;
+  span {
+    font-size: 0.875rem;
+    text-transform: capitalize;
+    color: var(--gray-300);
+
+    display: flex;
+    align-items: center;
+
+    svg {
+      margin-right: 0.5rem;
+    }
+
+    & + span {
+      margin-left: 1.5rem;
+    }
+  }
+
+  
 }
 
 .contentText {
@@ -21,21 +52,44 @@
   }
 }
 
-.postInformation {
+.footer {
   display: flex;
-  align-items: center;
-  margin-top: 1rem;
-  font-size: 0.75rem;
-  line-height: 1.125rem;
-  color: var(--gray-300);
+  justify-content: space-between;
+  position: relative;
 
-  div {
-    display: flex;
-    min-width: 6rem;
-    align-items: center;
+  padding-top: 3rem;
+  margin: 5rem auto 5rem;
+
+  &::before {
+    content: '';
+    width: 100%;
+    height: 1px;
+    background: var(--gray-200);
+    opacity: 0.1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
   }
 
-  span {
-    padding-left: 3px;
+  > div {
+    display: flex;
+    flex-direction: column;
+
+    p {
+      margin-bottom: 0.5rem;
+      font-size: 1.125rem;
+      color: var(--gray-100);
+    }
+
+    a {
+      font-size: 1rem;
+      font-weight: 600;
+      color: var(--pink);
+    }
+
+    & + div {
+      align-items: flex-end;
+    }
   }
 }
